create test file